--- a/food-app/src/app/globals.css
+++ b/food-app/src/app/globals.css
@@ -7,3 +7,27 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
+
+/* scrollbar styles */
+body {
+  --sb-track-color: #232e33;
+  --sb-thumb-color: #e11e48;
+  --sb-size: 10px;
+
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
+}
+/* scrollbar styles */
