--- a/food-app/src/app/globals.css
+++ b/food-app/src/app/globals.css
@@ -31,6 +31,28 @@ body::-webkit-scrollbar-thumb {
   border-radius: 10px;
 }
 
+.container-cart {
+  --sb-track-color: #232e33;
+  --sb-thumb-color: #e11e48;
+  --sb-size: 10px;
+
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+.container-cart::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+.container-cart::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 10px;
+}
+
+.container-cart::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
+}
+
 .card-container {
   --sb-track-color: #232e33;
   --sb-thumb-color: #e11e48;
